	PR target/14715 	* config/rs6000/rs6000.c (rs6000_stack_info): Make parm_size agree 	with STARTING_FRAME_OFFSET.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@80794 138bc75d-0d04-0410-961f-82ee72b054a4